# ai_app

./: .envrc  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  IMPLEMENTATION_PLAN.md  Makefile  README.md  REFACTORING_CHANGES.md  REFACTORING_EXAMPLES.md  REFACTORING_REPORT.md  REFACTORING_SUMMARY.md  Refactor.md  migrate_existing.sh  precommit_report.txt  pyproject.toml  refactor1.md  refactorprimer.md  refactorprimer2.md  requirements.txt  setup_structure.sh  setup_venv.sh  test_context_warning.py
.github/workflows/: ci.yml
.opencode/agent/: python-code-refactorer.md
ai-chat-ui/src/: README.md  pyproject.toml
ai-chat-ui/src/ai_chat_ui/: __init__.py  main.py  markdown_parser.py  response_display.py  window.py
ai-cli-bridge/: LaunchCDP.sh  StopCDP.sh  overview1.txt  overview2.txt  src.txt  src1.txt  tree1.txt
ai-cli-bridge/src/: README.md  cleanup_v1_remnant.sh  pyproject.toml
ai-cli-bridge/src/ai_cli_bridge/: LaunchCDP.sh  browser_manager.py  cli.py  config.py  display.py  errors.py  lock_manager.py
ai-cli-bridge/src/ai_cli_bridge/ai/: __init__.py  base.py  chatgpt.py  claude.py  factory.py  gemini.py  web_base.py
ai-cli-bridge/src/ai_cli_bridge/commands/: doctor_cmd.py  init_cdp_cmd.py  init_cmd.py  open_cmd.py  send_cmd.py  status_cmd.py
ai-cli-bridge/src/ai_cli_bridge/daemon/: config.py  daemon_cmd.py  main.py  process_manager.py
ai_chat_ui/desktop/: ai-chat-ui.desktop
ai_chat_ui/src/: README.md  gather_source.sh  pyproject.toml  src.txt
ai_chat_ui/src/ai_chat_ui/: __main__.py  main.py  response_display.py
docs/: AI-CLI-BRIDGE V1.3.1->V2.0.0 Refactoring.md  AI-CLI-BRIDGE V2.0.0 Code Specs.md  AI-CLI-BRIDGE V2.0.0 Design Specs.md  AI-Cli-Bridge  Code Specs V1.3.1.md  AI-Cli-Bridge-user-manual.md  CDP Browser Foundation Documentation.md  chain.md
docs/ai_cli_bridge/: AI-CLI-BRIDGE V2.0.0 Code Specs.md  AI-CLI-BRIDGE V2.0.0 Design Specs.md  AICLI_USER_MANUAL.md  CDP Browser Foundation Documentation.md
docs/ai_cli_bridge/Deprecated/: AI-CLI-BRIDGE Code Specs V1.3.1.md  AI-CLI-BRIDGE V1.3 Design Specs.md  AI-CLI-BRIDGE V1.3.1->V2.0.0 Refactoring.md  usermanual.md
docs/daemon/: AI_SUBSYSTEM_ARCHITECTURE.md  Daemon Test.md
docs/tools/: generate_context.md
runtime/ai_cli_bridge/profiles/main/: Last Version  Local State  first_party_sets.db
runtime/ai_cli_bridge/profiles/main/Default/: .org.chromium.Chromium.AJ5cS5  .org.chromium.Chromium.sKXqxF  BrowsingTopicsState  Cookies  DIPS  Favicons  History  Login Data  MediaDeviceSalts  Network Action Predictor  Network Persistent State  Preferences  Reporting and NEL  Shortcuts  Top Sites  TransportSecurity  Visited Links  Web Data
runtime/ai_cli_bridge/profiles/main/GrShaderCache/: data_0  data_1  index
runtime/ai_cli_bridge/profiles/main/GraphiteDawnCache/: data_1  index
runtime/ai_cli_bridge/profiles/main/ShaderCache/: data_0  data_1  data_2  index
runtime/ai_cli_bridge/profiles/main/component_crx_cache/: eeigpngbgcognadeebkilcpcaedhellh_1.4497d8060d0e53c12b4403aa9ebe7e827d4880bae3f4139a26a4feb7ed64c4a2  efniojlnjndmcbiieegkicadnoecjjef_1.b01c30a2db1be4909fd78efd724bf27afe7dfcb04ff9ef21e789366e1f13b50e  gcmjkmgdlgnkkcocmoeiminaijmmjnii_1.46e63e5ae1f57220e5674076467646bc6d269de54b33749dcf3755168c9be6c2  ggkkehgbnfjpeggfpleeakpidbkibbmn_1.760c6970b15e26f4afcc8c992d720b985347bc98e4b4c13f6c49ae4693171fd6  hfnkpimlhhgieaddgfemjhofmfblmnib_1.3d5c7dee900efd10f5730775f80bec0f058213bb9aa9c23d9cf952711322e318  jamhcnnkihinmdlkakkaopbjbbcngflc_1.c52c62a7c50daf7d3f73ec16977cd4b0ea401710807d5dbe3850941dd1b73a70  jflookgnkcckhobaglndicnbbgbonegd_1.80f137f7aa02e271b08553cfc402673e56ccdad41cf1d265a995cf12efc36350  lmelglejhemejginpboagddgdfbepgmp_1.acf6e13e3e26dff802cfc58472c62c88d7ce79bbe4c4d1788f8d118258d0ec9e  niikhdgajlphfehepabhhblakbdgeefj_1.38c89b12bb20a8f2751c9c7cd2e31c173a47af08c115e1ecccc2f5151a2cf2c6  (+1 more)
runtime/browser/profiles/multi_ai_cdp/: .org.chromium.Chromium.18eCmC  .org.chromium.Chromium.lhWHsj  .org.chromium.Chromium.luCJPv  .org.chromium.Chromium.mdU05f  Local State
runtime/daemon/config/: daemon_config.toml
scripts/: LaunchCDP.sh  StopCDP.sh  activate.sh  aicli  context_preface.txt  context_suffix.txt  generate_context  generate_report.sh
shared/scripts/: LaunchCDP.sh  activate.sh  launch-ui.sh  launch_cdp.sh
src/ai_app/ai_chat_ui/: __init__.py  __main__.py  daemon_client.py  main.py  response_display.py  startup_manager.py  stats_display.py  stats_helper.py  window.py
src/ai_app/ai_cli_bridge/: __init__.py  cli.py
src/ai_app/ai_cli_bridge/commands/: daemon_cmd.py  send_cmd.py  status_cmd.py
src/ai_app/daemon/: __init__.py  config.py  health.py  main.py
src/ai_app/daemon/ai/: base.py  base.py.bak.20251025-111012  chatgpt.py  claude.py  gemini.py  web_base.py  web_base.py.bak.20251025-111012
src/ai_app/daemon/browser/: connection_pool.py
src/ai_chat_ui/: __init__.py  daemon_client.py  gather_source.sh  startup_manager.py  stats_display.py  window.py
src/ai_cli_bridge/: cli.py
src/ai_cli_bridge/commands/: __init__.py  daemon_cmd.py  send_cmd.py  status_cmd.py
src/chat_ui/: __init__.py  __main__.py  cli_wrapper.py  config_manager.py  daemon_client.py  main.py  markdown_parser.py  response_display.py  startup_manager.py  stats_display.py  stats_helper.py  window.py
src/cli_bridge/: cli.py  constants.py  errors.py  gather_source.sh
src/cli_bridge/commands/: __init__.py  chats_cmd.py  daemon_cmd.py  send_cmd.py  status_cmd.py
src/common/: paths.py
src/daemon/: __init__.py  config.py  health.py  main.py  upgrade.md
src/daemon/ai/: __init__.py  base.py  chatgpt.py  claude.py  factory.py  gemini.py
src/daemon/browser/: connection_pool.py  connection_pool.py.backup
src/daemon/chats/: __init__.py  types.py
src/daemon/context/: __init__.py  types.py
src/daemon/templates/: __init__.py  types.py
src/daemon/transport/: __init__.py  base.py  chatgpt_web.py  claude_web.py  gemini_web.py  web.py
src/tools/: IMPLEMENTATION_SUMMARY.md  TEMPLATE_USAGE.md  generate_context.py  generate_context_design_specs.md  generate_report.py
(+8367 files in other folders)
