[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-chat-ui"
version = "0.1.0"
description = "GTK4/libadwaita UI for ai-cli-bridge"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Jacques", email = "your.email@example.com"}
]
dependencies = [
    # PyGObject is installed via system package manager (python3-gi)
    # No pip dependencies needed
]

[project.optional-dependencies]
dev = [
    "ai-cli-bridge",
]

[project.scripts]
ai-chat-ui = "ai_chat_ui.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["ai_chat_ui*"]
