[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai_chat_ui"
version = "2.0.0"
description = "GTK4/libadwaita UI for ai-cli-bridge V2.0.0 daemon"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Jacques", email = "your.email@example.com"}
]
dependencies = [
    "requests>=2.31.0",
    # PyGObject is installed via system package manager (python3-gi)
    # GTK4 and libadwaita are system dependencies
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
ai_chat_ui = "ai_chat_ui.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["ai_chat_ui*"]
